src/objects/JobTask__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Object to track all PLC Jobs Tasks.</description>
    <fields>
        <fullName>ActualHoursDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Actual Hours Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualHours__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Actual Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmIUser__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if( AssignedTo__c =  $User.Id, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JobTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Estimated Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobDueDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>PLCJob__r.NegotiatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>PLCJob__r.JobName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatusOverride__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Status Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Job Cancelled</fullName>
                </value>
                <value>
                    <fullName>Job on Hold</fullName>
                </value>
                <value>
                    <fullName>Being Estimated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Job Task</relationshipLabel>
        <relationshipName>JobTask</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Job Task</label>
    <listViews>
        <fullName>AllJobTask</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Job Task</label>
    </listViews>
    <nameField>
        <displayFormat>JT-{0000}</displayFormat>
        <label>Job Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>